--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     position: relative;
 
 }
+
 /*for underline*/
 #study:after {
     content: '';
@@ -73,7 +74,7 @@
     color: #5a6e79;
     margin-left: 45px;
     font-family: "Work Sans";
-    font-weight:bolder;
+    font-weight: bolder;
     margin-top: 160px;
 }
 
@@ -265,21 +266,29 @@
 }
 
 /* css for input type with id mail */
-#mail{
+#mail {
     position: absolute;
-    width:205px;
-    
+    width: 205px;
+    font-family: "Open Sans";
+    color: #969595;
+    width: 205px;
+    height: 30px;
+    font-size:12px;
+    border:none;
+    outline: 0px;
 }
+
 /* css for the help button */
-#helpbut{
-    font-size:small;
+#helpbut {
+    font-size: small;
     position: absolute;
     text-decoration: none;
     color: #ffffff;
-    background-color:#ffc178;
+    background-color: #ffc178;
     padding: 5px;
-   margin-left:140px;
-   border-style: none;
+    margin-bottom: -1px;
+    margin-left: 145px;
+    border-width: 0px;
 }
 
 /* css for base foot*/
