--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@
 
 /* css for base foot*/
 #basefoot {
+    display: flex;
     background-color: #1d232e;
     height: 50px;
     z-index: 1;
@@ -300,4 +301,18 @@
     margin-top: 1200px;
     width: 1340px;
 
+}
+/*css for copyright*/
+#copyright{
+    float: left;
+    margin-top: 20px;
+    margin-left:180px;
+    color:#6b6b6b;
+    font-size: small;
+}
+
+#basepara{
+    color:#6b6b6b;
+    font-size: small;
+    margin-left:30px;
 }
