--- a/style.css
+++ b/style.css
@@ -260,6 +260,13 @@
     margin-left: 40px;
 }
 
+#footpara{
+    color: #969595;
+    font-family: 'Roboto';
+    font-size:14px;
+    
+}
+
 /*css for support div*/
 #support {
     margin-left: 40px;
@@ -272,7 +279,7 @@
     font-family: "Open Sans";
     color: #969595;
     width: 205px;
-    height: 30px;
+    height: 31px;
     font-size:12px;
     border:none;
     outline: 0px;
@@ -285,7 +292,7 @@
     text-decoration: none;
     color: #ffffff;
     background-color: #ffc178;
-    padding: 5px;
+    padding: 6px;
     margin-bottom: -1px;
     margin-left: 145px;
     border-width: 0px;
@@ -315,4 +322,5 @@
     color:#6b6b6b;
     font-size: small;
     margin-left:30px;
+    font-family:'Roboto';
 }
