--- a/style.css
+++ b/style.css
@@ -387,3 +387,6 @@
     margin-left:30px;
     font-family:'Roboto';
 }
+h2.section-1 {
+    margin-left:565px;font-weight: bolder;font-family:Work Sans;position: absolute;margin-top:800px;
+}
